Get it on Firefox link fix color contrast

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -51,7 +51,8 @@ main {
                 &.firefox {
                     border: 2px solid #fff;
                     border-radius: .5rem;
-                    color: $grayish-blue;
+                    // color: $grayish-blue;
+                    color: #545963;
                     font-family: inherit;
                     font-weight: 500;
 
